Added form components and style.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,23 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+/* Color Theme */
+:root {
+  --primary: #3F334D;
+  --secondary: #574B60;
+  --grey: #222222;
+  --contrast: #EAF0CE;
+  --high-contrast: #f6f8eb;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+/* Full page */
+body{
+  background-color: var(--primary);
+  color: var(--high-contrast)
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+/* Form containers */
+.form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px 0px;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.form *{
+  margin: 3px 0px;
 }
