--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,7 +26,7 @@ body{
   align-items: center;
   margin: 20px 0px;
 }
-form input{
+input{
   background-color: var(--high-contrast);
   border: none;
   margin: 8px 0px;
@@ -43,6 +43,7 @@ form input{
   border-radius: 8px;
   cursor: pointer;
   font-weight: 600;
+  margin: 0px 10px;
 }
 .toggle-btn:hover,
 .btn:hover{
