--- a/client/src/App.css
+++ b/client/src/App.css
@@ -62,8 +62,9 @@ input {
 /* Header Style */
 header {
   background-color: var(--grey);
-  padding: 20px 30px;
+  padding: 20px 30px 0px 30px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   border-bottom: 2px solid var(--contrast);
@@ -110,6 +111,10 @@ footer p {
   flex-direction: column;
   align-items: center;
   padding: 25px;
+}
+
+nav {
+  width: 100%;
 }
 
 /* Links Styles */
@@ -176,6 +181,9 @@ footer p {
 
 /* Responsive Styling */
 @media (max-width: 768px) {
+  body {
+    background: linear-gradient(90deg, rgba(18, 18, 18, 0.8), rgba(0, 243, 243, 0.8));
+  }
   nav {
     flex-direction: column;
     align-items: stretch;
