phil's card game

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,7 +9,7 @@
 
 /* Full page */
 body {
-  background: linear-gradient(135deg, rgba(18, 18, 18, 0.8), rgba(0, 243, 243, 0.8));
+  background: linear-gradient(90deg, var(--primary), rgba(0, 243, 243, 0.8));
   color: var(--high-contrast);
   text-align: center;
 }
